--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,11 @@
 {
-    "python.pythonPath": "venv\\Scripts\\python.exe",
+    "python.pythonPath": "/home/ubuntu/.local/share/virtualenvs/Web_Crawler-Sj59TEZX/bin/python",
     
     "python.linting.enabled": true,
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
     "python.linting.lintOnSave": true,
     "python.formatting.provider": "autopep8",
-
     "editor.formatOnSave": true,
     "editor.formatOnPaste": false,
     "terminal.integrated.env.windows": {
